Bug 437701 - "File Type Options" button assumes presence of filetypes KCM and does nothing if it is not present
Summary: "File Type Options" button assumes presence of filetypes KCM and does nothing...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: Properties dialog (other bugs)
Version First Reported In: 5.82.0
Platform: Flatpak Linux
: NOR normal
Target Milestone: ---
Assignee: KIO Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-05-26 13:32 UTC by Abdolaziz
Modified: 2021-07-26 20:24 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.85
Sentry Crash Report:


Attachments
File Type Options dialogue (19.06 KB, image/png)
2021-05-26 13:32 UTC, Abdolaziz
Details
attachment-26803-0.html (1.82 KB, text/html)
2021-05-26 14:12 UTC, Abdolaziz
Details
2.png (38.72 KB, image/png)
2021-05-27 14:38 UTC, Abdolaziz
Details
3.png (82.72 KB, image/png)
2021-05-27 14:38 UTC, Abdolaziz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Abdolaziz 2021-05-26 13:32:04 UTC
Created attachment 138806 [details]
File Type Options dialogue

SUMMARY


STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 5.80.0
Qt Version: Qt 5.15.2 (built against 5.15.2)

ADDITIONAL INFORMATION
When I right-click any file, then properties, the "File Type Options" dialogue doesn't appear when I click it.
Now I had to revert back to the old version 20.12.3
Comment 1 Nate Graham 2021-05-26 14:01:28 UTC
You mean when you click on that button, nothing happens?

Are you running Dolphin on KDE Plasma, or another desktop environment?
Comment 2 Abdolaziz 2021-05-26 14:12:11 UTC
Created attachment 138807 [details]
attachment-26803-0.html

Sorry, I didn't mention my OS that's Ubuntu hirsute.
Yes, nothing appears when I click that button to change the default application to open a particular file type, because when I double click on image, sound or videos, out doesn't open in the default application. Instead it opens a dialogue to choose the opening application. It's weird. I don't know why Dolphin has these bugs for a long time.
Furthermore when I try to open any USB device or no mobile phone, Dolphin shows the error. Now I installed the old version unfortunately.

⁣Get BlueMail for Android ​

On May 26, 2021, 6:31 PM, at 6:31 PM, Nate Graham <bugzilla_noreply@kde.org> wrote:
>https://bugs.kde.org/show_bug.cgi?id=437701
>
>Nate Graham <nate@kde.org> changed:
>
>           What    |Removed                     |Added
>----------------------------------------------------------------------------
>                 CC|                            |nate@kde.org
>         Resolution|---                         |WAITINGFORINFO
>             Status|REPORTED                    |NEEDSINFO
>
>--- Comment #1 from Nate Graham <nate@kde.org> ---
>You mean when you click on that button, nothing happens?
>
>Are you running Dolphin on KDE Plasma, or another desktop environment?
>
>--
>You are receiving this mail because:
>You reported the bug.
Comment 3 Nate Graham 2021-05-26 16:02:52 UTC
The dialog asking you to choose which app to open the file in is a Flatpak portal thing. I'm not sure we can fix it. It's baked into how Flatpak apps handle things like this.

The button doing nothing when clicked is a legit issue that we can fix, though.
Comment 4 Bug Janitor Service 2021-05-26 21:24:35 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/457
Comment 5 Abdolaziz 2021-05-27 09:42:15 UTC
   "The dialog asking you to choose which app to open the file in is a
   Flatpak

   portal thing. I'm not sure we can fix it. It's baked into how Flatpak apps
   handle things like this."
   
   This dialogue relates to the second dialogue when clicking "File Type Options". When we set the default application, the first dialogue doesn't appear.
   It doesn't relate to snap or flatpak. They do not change the source code of the applications. Even for snap version of some applications, I've seen the first dialogue   

   On 5/26/21 8:32 PM, Nate Graham wrote:

     https://bugs.kde.org/show_bug.cgi?id=437701          
     Nate Graham      <nate@kde.org> [1]      changed:
     
                What    |Removed                     |Added
     ----------------------------------------------------------------------------
                  Status|NEEDSINFO                   |CONFIRMED
              Resolution|WAITINGFORINFO              |---
                 Summary|"File Type Options"         |"File Type Options" button
                        |dialogue doesn't appear     |assumes presence of
                        |                            |filetypes KCM and does
                        |                            |nothing if it is not
                        |                            |present
                Assignee|     dolphin-bugs-null@kde.org [2]        |     kio-bugs-null@kde.org [3]                 Version|21.04.1                     |5.82.0
               Component|general                     |Properties dialog
                 Product|dolphin                     |frameworks-kio
          Ever confirmed|0                           |1
                      CC|                            |     kdelibs-bugs@kde.org [4]     
     --- Comment #3 from Nate Graham      <nate@kde.org> [1]      ---
     The dialog asking you to choose which app to open the file in is a Flatpak
     portal thing. I'm not sure we can fix it. It's baked into how Flatpak apps
     handle things like this.
     
     The button doing nothing when clicked is a legit issue that we can fix, though.


   

   1. mailto:nate@kde.org
   2. mailto:dolphin-bugs-null@kde.org
   3. mailto:kio-bugs-null@kde.org
   4. mailto:kdelibs-bugs@kde.org
Comment 6 Nate Graham 2021-05-27 13:03:21 UTC
Can you attach a screenshot of the dialog we're talking about?
Comment 7 Abdolaziz 2021-05-27 14:38:53 UTC
Created attachment 138826 [details]
2.png

   The first dialogue I can't send the screenshot because I uninstalled
   the buggy version and reverted back to the old one. But the button
   "File Type Options" is attached.

   The first one is not important and it relates to the facts that I
   can't open the second dialogue when I click "File Type Options"
   button. When I could open this button then I an define the default
   application and then the first dialogue (choosing between the
   appropriate application to open the file) doesn't show anymore.

   Attach 2.png is the "File Type Options" button and 3.png is the
   dialogue when I click the button. In the latest version of Dolphin
   which I tested yesterday, 3.png doesn't appear, and this is the root
   of the problem.


   On 5/27/21 5:33 PM, Nate Graham wrote:

     https://bugs.kde.org/show_bug.cgi?id=437701          
     --- Comment #6 from Nate Graham      <nate@kde.org> [1]      ---
     Can you attach a screenshot of the dialog we're talking about?


   

   1. mailto:nate@kde.org
Comment 8 Abdolaziz 2021-05-27 14:38:53 UTC
Created attachment 138827 [details]
3.png
Comment 9 Bug Janitor Service 2021-07-06 17:48:03 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kwidgetsaddons/-/merge_requests/80
Comment 10 Ahmad Samir 2021-07-26 20:24:09 UTC
Git commit 21f35a4698c9ee32f6870c930f6c372dff0b1fd6 by Ahmad Samir.
Committed on 26/07/2021 at 20:24.
Pushed by ahmadsamir into branch 'master'.

kmimetypeeditor: display an error message if keditfiletype couldn't be started
FIXED-IN: 5.85

M  +12   -1    src/kmimetypeeditor.cpp
M  +4    -0    src/kmimetypeeditor.h

https://invent.kde.org/frameworks/kwidgetsaddons/commit/21f35a4698c9ee32f6870c930f6c372dff0b1fd6