kmimetypeeditor: display an error message if keditfiletype couldn't be started

BUG: 437701
FIXED-IN: 5.85